# TinyTracer

./: .gitignore  CMakeLists.txt  main.cpp  tiny_tracer.hpp
src/: monte_carlo.cpp  monte_carlo.hpp  test_vec3.cpp  vec3.h
